# livraria_3info1

./: .pdm-python  db.sqlite3  pyproject.toml
app/: urls.py
core/: admin.py
core/migrations/: 0006_editora.py
core/models/: categoria.py
core/views/: __init__.py
